@@ -35,6 +35,8 @@ x2goclient (4.1.1.1-0x2go1) UNRELEASED; urgency=medium
     - src/onmainwindow.cpp: wrap user name for client-side mounts in quotes.
       Fixes: #559. Will fail with user names that contain quotes, but oh
       well...
+    - {example/x2goclient-cli,src/onmainwindow.cpp}: remove hopefully obsolete
+      HOSTNAME exporting into environment.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.1.1):
